--- a/flashlight/res/values/strings.xml
+++ b/flashlight/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="hello">Hello World, FlashlightActivity!</string>
     <string name="app_name">Flashlight</string>
+    <string name="keep_open">Maintain state upon exit</string>
 
 </resources>
